# pdm-wheel

./: .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/reference/: SUMMARY.md
docs/reference/pdm_wheel/: __init__.md  wheel.md
src/pdm_wheel/: __init__.py  check_built_wheel.py  wheel.py
tests/: __init__.py  conftest.py  test_clean.py  test_wheel.py
tests/fixtures/: pyproject.toml
