[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdm-wheel"
dynamic = ["version"]
description = "PDM plugin that save your requirements as wheels, similar to pip-wheel"
authors = [{ name = "Gabriel Dugny", email = "pdm-wheel@dugny.me" }]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/GabDug/pdm-wheel"
"Changelog" = "https://github.com/GabDug/pdm-wheel/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/GabDug/pdm-wheel/issues"

[project.entry-points.pdm]
pdm-wheel = "pdm_wheel:register_pdm_plugin"


[project.optional-dependencies]
pdm = ["pdm>=2.7.4,!=2.13.0,!=2.13.1"]

[tool.pdm]
plugins = ["sync-pre-commit-lock", "-e ."]

[tool.pdm.version]
source = "scm"
write_to = "pdm_wheel/_version.py"
write_template = "__version__: str = \"{}\"\n"

[tool.pdm.build]
package-dir = "src"
includes = ["src", "src/pdm_wheel"]
excludes = [
    "tests/.*",
    "tests/build",
    "tests/fixtures/.*",
    "tests/fixtures/wheels",
    ".venv",
    ".pdm-python",
]

[tool.pdm.scripts]
fmt = {cmd="black .", help="Run black formatter"}
test = "pytest"
test-cov = {cmd="pytest --junitxml=junit/test-results.xml --cov --cov-report=xml --cov-report=html --cov-report=term-missing", help="Run tests with coverage"}
doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
lint = "pre-commit run --all-files"
lint-mypy = {cmd="mypy src", help="Run mypy type checker"}
lint-ruff = {cmd="ruff .", help="Run ruff linter"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
    "mypy>=1.4",
    "pylint>=2.15.4",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pdm>=2.4.0",
    "ruff>=0.0.270",
    "parver>=0.4",
    "ipdb>=0.13.13",
    "tox>=4.14.2",
    "tox-pdm>=0.7.2",
    "tox-gh>=1.3.1",
]
testtox= [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
]


[tool.ruff]
exclude = [".git", "tests/fixtures/*", "env", "dist", "build", "__pypackages__"]
line-length = 140

[tool.ruff.lint]
extend-ignore = ["S101", "E501"]
extend-select = [
    "E",
    "F",
    "W",
    "TCH",
    "I",
    "Q000",
    "TCH",
    "I001",
    "S",
    "T",
    "PTH",
    "PYI",
    "RET",
    "D209",
    "D202",
    "EM101",
]


[tool.mypy]
files = ["src"]
strict = true


[tool.black]
line-length = 120
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ node_modules .venv __pypackages__"


[tool.coverage.paths]
source =[
   "src",
   "*/site-packages"
]
[tool.coverage.run]
branch = true
parallel = true
include = ["src/*"]
omit = ["*/tests/*"]
source = ["src", "tests"]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod]',
    "except ImportError:",
    "# nocov",
]
