
[project]
name = "test-project"
version = "0.1.0"
description = ""
authors = [
    {name = "John Doe", email = "john@d.oe"},
]
dependencies = [
    "requests==2.28.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
opt = [
    "pathspec>=0.7.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
