[build-system]
build-backend = "pdm.backend"
requires = [
  "pdm-backend",
]

[project]
name = "test-project"
version = "0.1.0"
description = ""
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "John Doe", email = "john@d.oe" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests==2.28.2",
]
optional-dependencies.opt = [
  "pathspec>=0.7",
]

[tool.pdm.dev-dependencies]
dev = [
  "black>=23.3.0",
]
